--- a/3dPortfolio/package.json
+++ b/3dPortfolio/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "framer-motion": "^6.5.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-tilt": "^1.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
